# Messaging-System

./: .gitignore  docker-compose.yml
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Helpers/: Structures.h
Client/Tests/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  Dockerfile  Server.cpp  Server.h  Structures.h  config.yaml  docker-compose.yml  main.cpp
Server/Client/: Client.cpp  Client.h
Server/ClientConfig/: ClientConfig.cpp  ClientConfig.h
Server/ClientGroup/: ClientGroup.cpp  ClientGroup.h
Server/Database/: Database.cpp  Database.h
Server/Helpers/: Structures.h  Utilities.cpp  Utilities.h
Server/Message/: Message.cpp  Message.h
Server/ServerConfiguration/: ServerConfiguration.cpp  ServerConfiguration.h
Server/Socket/: Socket.cpp  Socket.h  SocketManager.cpp  SocketManager.h
Server/SocketManager/: SocketManager.cpp  SocketManager.h
Simple_Example/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
Simple_Example/Client/: Client.h  Dockerfile
